--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   background-image: url(http://www.earthseaimagery.com/images/steam_schooners_going_up_river_pc.jpg);
   background-size: cover;
+  text-align: center;
 }
 
 div3 {
