--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
 body {
-  background-image: url(http://www.earthseaimagery.com/images/steam_schooners_going_up_river_pc.jpg);
+  background-image: url(http://www.earthseaimagery.com/images/steam_schooners_going_up_river_pc.jpg) no-repeat center center fixed;
   background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
   text-align: center;
 }
 
