--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(http://www.earthseaimagery.com/images/steam_schooners_going_up_river_pc.jpg) no-repeat center center fixed;
+  background-image: url(http://www.earthseaimagery.com/images/steam_schooners_going_up_river_pc.jpg) no-repeat;
   background-size: cover;
   -webkit-background-size: cover;
   -moz-background-size: cover;
