--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   background-image: url(http://www.earthseaimagery.com/images/steam_schooners_going_up_river_pc.jpg);
+  background-image: no-repeat;
   background-size: cover;
   text-align: center;
 }
